# brain-cli

./: ATTRIBUTION.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  codeql.yml
cmd/brain/: Cargo.toml  main.rs
cmd/brain/tests/: activity_test.rs  dispatch_test.rs  project_test.rs  session_test.rs  task_test.rs
docs/: sample-dispatch-report.md
libs/brain-core/: Cargo.toml  activity.rs  db.rs  dispatch.rs  error.rs  lib.rs  project.rs  scope.rs  session.rs  task.rs  types.rs
scripts/: add_project_path.sql
