[workspace]
resolver = "3"
members = [
    "cmd/brain",
    "libs/brain-core",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Peter Manahan"]
license = "MIT"

[workspace.dependencies]
brain-core = { path = "libs/brain-core" }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
assert_cmd = "2"
tempfile = "3"
